--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
-        "@fortawesome/free-brands-svg-icons": "^6.0.0",
-        "@fortawesome/free-regular-svg-icons": "^6.0.0",
-        "@fortawesome/free-solid-svg-icons": "^6.0.0",
-        "@fortawesome/react-fontawesome": "^0.1.17",
+        "@fortawesome/free-brands-svg-icons": "^6.2.1",
+        "@fortawesome/free-regular-svg-icons": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
+        "@fortawesome/react-fontawesome": "^0.1.19",
+        "@mui/material": "^5.11.4",
         "@reduxjs/toolkit": "^1.9.1",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
+        "axios": "^1.2.2",
         "classnames": "^2.3.1",
         "normalize.css": "^8.0.1",
+        "phosphor-react": "^1.4.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
