--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emoji-mart/data": "^1.1.2",
+        "@emoji-mart/react": "^1.1.1",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
@@ -10,6 +12,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.2.1",
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.1.19",
+        "@mui/lab": "^5.0.0-alpha.115",
         "@mui/material": "^5.11.4",
         "@reduxjs/toolkit": "^1.9.1",
         "@testing-library/jest-dom": "^5.16.4",
@@ -18,6 +21,8 @@
         "@tippyjs/react": "^4.2.6",
         "axios": "^1.2.2",
         "classnames": "^2.3.1",
+        "emoji-mart": "^5.5.2",
+        "firebase": "^9.15.0",
         "normalize.css": "^8.0.1",
         "phosphor-react": "^1.4.1",
         "react": "^18.2.0",
@@ -25,6 +30,8 @@
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "redux-persist": "^6.0.0",
+        "swiper": "^8.4.5",
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
